src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Action_Time__c</fullName>
        <label>Action Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Out_Reason__c</fullName>
        <label>Check-Out Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Checked_In_Running__c</fullName>
        <formula>IF( Hours_Checked_In__c=0, (NOW() - LastModifiedDate)*24, Hours_Checked_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Hours Checked-In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Checked_In__c</fullName>
        <label># Hours Checked-In</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsWeekend__c</fullName>
        <formula>IF(OR(MOD( DATEVALUE(Action_Time__c) - DATE(1900, 1, 6), 7)=0,MOD( DATEVALUE(Action_Time__c) - DATE(1900, 1, 6), 7)=1),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsWeekend?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( ISPICKVAL(Action__c, &quot;Check-In&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000001wimm&quot;,&quot;Checked-In&quot;)&amp;&quot; Checked-In&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015o0000001wimn&quot;,&quot;Checked-Out&quot;)&amp;&quot; Checked-Out&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Checked_In__c</fullName>
        <formula>TEXT(FLOOR((NOW() - Time_Log__r.Last_Time_Checked_Out__c )*24)) &amp;&quot; HRS &quot;&amp; TEXT(FLOOR(MOD(((NOW() - Time_Log__r.Last_Time_Checked_Out__c )*3600*24),3600)/60)) &amp;&quot; MINS&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Checked-In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Log__c</fullName>
        <label>Time Log</label>
        <referenceTo>Time_Log__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <label>Total Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Time Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>